Added more sass files

--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -1,3 +1,6 @@
+////// SETTINGS //////
+@import 'settings/colours';
+
 ////// OBJECTS //////
 @import 'generic/reset';
 @import 'generic/normalize';
