--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -1,6 +1,13 @@
 ////// SETTINGS //////
 @import 'settings/colours';
 
-////// OBJECTS //////
+////// GENERIC //////
+@import 'generic/page';
 @import 'generic/reset';
 @import 'generic/normalize';
+
+////// OBJECTS //////
+@import 'objects/container';
+
+////// COMPONENTS //////
+@import 'components/color-block';
