Added information on each colour

--- a/components/colours.html
+++ b/components/colours.html
@@ -1,28 +1,28 @@
 <h2>Colours</h2>
 <div class="color-block color-block--pale-turquoise">
-  <p>Pale turquoise</p>
+  <p>Pale turquoise - ($pale-turquoise) - #96ceb4</p>
 </div>
 
 <div class="color-block color-block--turquoise">
-  <p>Turquoise</p>
+  <p>Turquoise - ($turquoise) - #88d8b0</p>
 </div>
 
 <div class="color-block color-block--biege">
-  <p>Biege</p>
+  <p>Biege - ($biege) - #ffeead</p>
 </div>
 
 <div class="color-block color-block--red">
-  <p>Red</p>
+  <p>Red - ($red) - #ff6f69</p>
 </div>
 
 <div class="color-block color-block--orange">
-  <p>Orange</p>
+  <p>Orange - ($orange) - #ffcc5c</p>
 </div>
 
 <div class="color-block color-block--white">
-  <p>White</p>
+  <p>White - ($white) - #fff</p>
 </div>
 
 <div class="color-block color-block--black">
-  <p>Black</p>
+  <p>Black - ($black) - #000</p>
 </div>
