--- a/components/colours.html
+++ b/components/colours.html
@@ -1,28 +1,28 @@
-<h2>Colours</h2>
-<div class="color-block color-block--pale-turquoise">
+<h2 class="margin-bottom-normal">Colours</h2>
+<div class="color-block color-block--pale-turquoise margin-bottom-small">
   <p>Pale turquoise - ($pale-turquoise) - #96ceb4</p>
 </div>
 
-<div class="color-block color-block--turquoise">
+<div class="color-block color-block--turquoise margin-bottom-small">
   <p>Turquoise - ($turquoise) - #88d8b0</p>
 </div>
 
-<div class="color-block color-block--biege">
+<div class="color-block color-block--biege margin-bottom-small">
   <p>Biege - ($biege) - #ffeead</p>
 </div>
 
-<div class="color-block color-block--red">
+<div class="color-block color-block--red margin-bottom-small">
   <p>Red - ($red) - #ff6f69</p>
 </div>
 
-<div class="color-block color-block--orange">
+<div class="color-block color-block--orange margin-bottom-small">
   <p>Orange - ($orange) - #ffcc5c</p>
 </div>
 
-<div class="color-block color-block--white">
+<div class="color-block color-block--white margin-bottom-small">
   <p>White - ($white) - #fff</p>
 </div>
 
-<div class="color-block color-block--black">
+<div class="color-block color-block--black margin-bottom-small">
   <p>Black - ($black) - #000</p>
 </div>
