--- a/components/colours.html
+++ b/components/colours.html
@@ -1,4 +1,4 @@
-<h2 class="margin-bottom-normal">Colours</h2>
+<h2 class="margin-bottom-normal border-bottom border--medium">Colours</h2>
 <div class="color-block color-block--pale-turquoise margin-bottom-small">
   <p>Pale turquoise - ($pale-turquoise) - #96ceb4</p>
 </div>
