--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -9,6 +9,7 @@
 
 ////// OBJECTS //////
 @import 'objects/container';
+@import 'objects/border';
 
 ////// UTILITIES //////
 @import 'utilities/spacing';
