--- a/styles/global.css
+++ b/styles/global.css
@@ -370,6 +370,30 @@ textarea {
   width: 1140px;
   margin: 0 auto; }
 
+.border {
+  border: 1px solid; }
+
+.border-left {
+  border-left: 1px solid; }
+
+.border-bottom {
+  border-bottom: 1px solid; }
+
+.border-top {
+  border-top: 1px solid; }
+
+.border-right {
+  border-right: 1px solid; }
+
+.border--thin {
+  border-width: 1px; }
+
+.border--medium {
+  border-width: 3px; }
+
+.border--thick {
+  border-width: 5px; }
+
 .margin-all-small {
   margin: 10px; }
 
