Added typography classes for sizing and created typography section for pages

--- a/components/borders.html
+++ b/components/borders.html
@@ -1,4 +1,4 @@
-<h2 class="margin-bottom-normal border-bottom border--medium">Borders</h2>
+<h2 class="margin-bottom-normal border-bottom border--medium heading-medium">Borders</h2>
 <div>
   <h3 class="margin-bottom-normal">All three standard borders called using the .border class you can then use the modifiers shown below</h3>
   <p class="border border--thin margin-bottom-normal">This is a piece of text with a thin border - .border--thin</p>
