--- a/components/spacing.html
+++ b/components/spacing.html
@@ -1,4 +1,4 @@
-<h2 class="margin-bottom-normal border-bottom border--medium">Spacing</h2>
+<h2 class="margin-bottom-normal border-bottom border--medium heading-medium">Spacing</h2>
 <h3 class="margin-bottom-normal">Below shows the three different levels of spacing with their class extensions</h3>
 <div class="margin-bottom-normal">
   <h4 class="margin-bottom-small">Small Spacing - .margin-bottom-small - You can replace bottom with top, left, right or all</h3>
