--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -1,11 +1,15 @@
 ////// SETTINGS //////
 @import 'settings/colours';
 @import 'settings/globals';
+@import 'settings/typography';
 
 ////// GENERIC //////
-@import 'generic/page';
 @import 'generic/reset';
 @import 'generic/normalize';
+
+////// ELEMENTS //////
+@import 'elements/page';
+@import 'elements/typography';
 
 ////// OBJECTS //////
 @import 'objects/container';
@@ -16,3 +20,4 @@
 
 ////// COMPONENTS //////
 @import 'components/color-block';
+@import 'components/typography';
