Added text alignment classed

--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -17,6 +17,8 @@
 
 ////// UTILITIES //////
 @import 'utilities/spacing';
+@import 'utilities/typography';
+
 
 ////// COMPONENTS //////
 @import 'components/color-block';
