--- a/styles/global.css
+++ b/styles/global.css
@@ -367,9 +367,6 @@ html, body {
   background-color: #F0F0F0;
   font-family: 'Didact Gothic', sans-serif; }
 
-h3, h4, h5, h6, p {
-  display: table; }
-
 p {
   font-size: 16px; }
 
@@ -448,6 +445,15 @@ label {
 
 .margin-bottom-large {
   margin-bottom: 40px; }
+
+.text-left {
+  text-align: left; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
 
 .color-block {
   padding: 10px;
