--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -10,6 +10,7 @@
 ////// ELEMENTS //////
 @import 'elements/page';
 @import 'elements/typography';
+@import 'elements/link';
 
 ////// OBJECTS //////
 @import 'objects/container';
@@ -23,3 +24,4 @@
 ////// COMPONENTS //////
 @import 'components/color-block';
 @import 'components/typography';
+@import 'components/buttons';
