Added text styles

--- a/components/typography.html
+++ b/components/typography.html
@@ -1,13 +1,22 @@
-<div class="margin-bottom-normal">
-  <h2 class="margin-bottom-normal border-bottom border--medium heading-medium">Typography</h2>
-  <p class="heading-large margin-bottom-normal">Large Heading</p>
-  <p class="heading-medium margin-bottom-normal">Medium Heading</p>
-  <p class="heading-small margin-bottom-normal">Small Heading</p>
-  <p class="margin-bottom-normal">Normal Text</p>
-  <p class="caption">Caption text goes here</p>
-</div>
 <div>
-  <p class="text-left">Left aligned text</p>
-  <p class="text-center">Centrally aligned text</p>
-  <p class="text-right">Right aligned text</p>
+  <h2 class="margin-bottom-normal border-bottom border--medium heading-medium">Typography</h2>
+  <div class="margin-bottom-normal">
+    <h2 class="heading-small margin-bottom-small">Heading and text sizes:</h2>
+    <p class="heading-large margin-bottom-normal">Large Heading</p>
+    <p class="heading-medium margin-bottom-normal">Medium Heading</p>
+    <p class="heading-small margin-bottom-normal">Small Heading</p>
+    <p class="margin-bottom-normal">Normal Text</p>
+    <p class="caption">Caption text goes here</p>
+  </div>
+  <div>
+    <h2 class="heading-small margin-bottom-small">Text Alignment:</h2>
+    <p class="text-left">Left aligned text</p>
+    <p class="text-center">Centrally aligned text</p>
+    <p class="text-right">Right aligned text</p>
+  </div>
+  <div>
+    <h2 class="heading-small margin-bottom-small">Text Styles:</h2>
+    <p class="text-bold margin-bottom-small">Text in bold</p>
+    <p class="text-italic">Text in italics</p>
+  </div>
 </div>
