Added a basic grid

--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -15,6 +15,7 @@
 ////// OBJECTS //////
 @import 'objects/container';
 @import 'objects/border';
+@import 'objects/grid';
 
 ////// UTILITIES //////
 @import 'utilities/spacing';
