--- a/styles/global.css
+++ b/styles/global.css
@@ -408,6 +408,33 @@ a {
 .border--thick {
   border-width: 5px; }
 
+.row {
+  margin: 0;
+  margin-bottom: 20px; }
+
+.row:last-child {
+  margin-bottom: 0; }
+
+@media all and (min-width: 600px) {
+  .col-2-3 {
+    float: left;
+    width: 66.66%; }
+
+  .col-1-2 {
+    float: left;
+    width: 50%; }
+
+  .col-1-3 {
+    float: left;
+    width: 33.33%; }
+
+  .col-1-4 {
+    float: left;
+    width: 25%; }
+
+  .col-1-8 {
+    float: left;
+    width: 12.5%; } }
 .margin-all-small {
   margin: 10px; }
 
