--- a/styles/global.css
+++ b/styles/global.css
@@ -408,33 +408,117 @@ a {
 .border--thick {
   border-width: 5px; }
 
-.row {
-  margin: 0;
-  margin-bottom: 20px; }
+/*  SECTIONS  */
+.section {
+  clear: both;
+  padding: 0px;
+  margin: 0px; }
 
-.row:last-child {
-  margin-bottom: 0; }
+/*  COLUMN SETUP  */
+.col {
+  display: block;
+  float: left;
+  margin: 1% 0 1% 1.6%; }
 
-@media all and (min-width: 600px) {
-  .col-2-3 {
-    float: left;
-    width: 66.66%; }
+.col:first-child {
+  margin-left: 0; }
 
-  .col-1-2 {
-    float: left;
-    width: 50%; }
+/*  GROUPING  */
+.group:before,
+.group:after {
+  content: "";
+  display: table; }
 
-  .col-1-3 {
-    float: left;
-    width: 33.33%; }
+.group:after {
+  clear: both; }
 
-  .col-1-4 {
-    float: left;
-    width: 25%; }
+.group {
+  zoom: 1;
+  /* For IE 6/7 */ }
 
-  .col-1-8 {
-    float: left;
-    width: 12.5%; } }
+/*  GRID OF TWO  */
+.span_2_of_2 {
+  width: 100%; }
+
+.span_1_of_2 {
+  width: 49.2%; }
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .col {
+    margin: 1% 0 1% 0%; } }
+@media only screen and (max-width: 480px) {
+  .span_2_of_2, .span_1_of_2 {
+    width: 100%; } }
+/*  GRID OF THREE  */
+.span_3_of_3 {
+  width: 100%; }
+
+.span_2_of_3 {
+  width: 66.13%; }
+
+.span_1_of_3 {
+  width: 32.26%; }
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .col {
+    margin: 1% 0 1% 0%; }
+
+  .span_3_of_3, .span_2_of_3, .span_1_of_3 {
+    width: 100%; } }
+/*  GRID OF FOUR  */
+.span_4_of_4 {
+  width: 100%; }
+
+.span_3_of_4 {
+  width: 74.6%; }
+
+.span_2_of_4 {
+  width: 49.2%; }
+
+.span_1_of_4 {
+  width: 23.8%; }
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .col {
+    margin: 1% 0 1% 0%; }
+
+  .span_1_of_4, .span_2_of_4, .span_3_of_4, .span_4_of_4 {
+    width: 100%; } }
+/*  GRID OF EIGHT  */
+.span_8_of_8 {
+  width: 100%; }
+
+.span_7_of_8 {
+  width: 87.3%; }
+
+.span_6_of_8 {
+  width: 74.6%; }
+
+.span_5_of_8 {
+  width: 61.9%; }
+
+.span_4_of_8 {
+  width: 49.2%; }
+
+.span_3_of_8 {
+  width: 36.5%; }
+
+.span_2_of_8 {
+  width: 23.8%; }
+
+.span_1_of_8 {
+  width: 11.1%; }
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+  .col {
+    margin: 1% 0 1% 0%; }
+
+  .span_1_of_8, .span_2_of_8, .span_3_of_8, .span_4_of_8, .span_5_of_8, .span_6_of_8, .span_7_of_8, .span_8_of_8 {
+    width: 100%; } }
 .margin-all-small {
   margin: 10px; }
 
@@ -570,5 +654,10 @@ a {
     cursor: not-allowed; }
   .btn--disabled:focus {
     outline: none; }
+
+.article-tile {
+  width: 100%;
+  background-color: #ff6f69;
+  height: 350px; }
 
 /*# sourceMappingURL=global.css.map */
