--- a/styles/sass/all.scss
+++ b/styles/sass/all.scss
@@ -26,3 +26,4 @@
 @import 'components/color-block';
 @import 'components/typography';
 @import 'components/buttons';
+@import 'components/article-tile';
