--- a/components/grid.html
+++ b/components/grid.html
@@ -1,28 +1,28 @@
 <div>
   <h2 class="margin-bottom-normal border-bottom border--medium heading-medium">Grids</h2>
   <h3 class="heading-small margin-bottom-normal">Row containing two columns</h3>
-  <div class="section group">
+  <div class="section group margin-bottom-normal">
 	   <div class="col span_1_of_2">
-	      This is column 1
+	      1 of 2
 	   </div>
      <div class="col span_1_of_2">
-	      This is column 2
+	      1 of 2
 	   </div>
   </div>
   <h3 class="heading-small margin-bottom-normal">Row containing three columns</h3>
-  <div class="section group">
+  <div class="section group margin-bottom-normal">
 	   <div class="col span_1_of_3">
-	       This is column 1
+	       1 of 3
 	   </div>
 	   <div class="col span_1_of_3">
-	       This is column 2
+	       1 of 3
 	   </div>
 	   <div class="col span_1_of_3">
-	       This is column 3
+	       1 of 3
 	   </div>
   </div>
   <h3 class="heading-small margin-bottom-normal">Row containing four columns</h3>
-  <div class="section group">
+  <div class="section group margin-bottom-normal">
 	  <div class="col span_1_of_4">
 	     1 of 4
 	  </div>
@@ -37,7 +37,7 @@
 	  </div>
   </div>
   <h3 class="heading-small margin-bottom-normal">Row containing eight columns</h3>
-  <div class="section group">
+  <div class="section group margin-bottom-normal">
 	   <div class="col span_1_of_8">
 	      1 of 8
 	   </div>
