--- a/styles/sass/objects/_grid.scss
+++ b/styles/sass/objects/_grid.scss
@@ -19,7 +19,7 @@
 .group:after { clear:both;}
 .group { zoom:1; /* For IE 6/7 */ }
 
-/*  GRID OF TWO  */
+/** GRID OF TWO  **/
 .span_2_of_2 {
 	width: 100%;
 }
