--- a/styles/global.css
+++ b/styles/global.css
@@ -381,7 +381,7 @@ a {
     cursor: pointer; }
 
 .container {
-  width: 1140px;
+  width: 90%;
   margin: 0 auto; }
 
 .border {
@@ -629,7 +629,8 @@ a {
   border-radius: 5px;
   padding: 1em;
   padding-left: 2em;
-  padding-right: 2em; }
+  padding-right: 2em;
+  margin-bottom: 1em; }
   .btn:hover {
     cursor: pointer; }
   .btn:focus {
@@ -655,9 +656,62 @@ a {
   .btn--disabled:focus {
     outline: none; }
 
+.btn--form-submit {
+  width: 100%;
+  margin-bottom: 10px; }
+  @media screen and (min-width: 768px) {
+    .btn--form-submit {
+      width: 20em; } }
+
 .article-tile {
   width: 100%;
   background-color: #ff6f69;
   height: 350px; }
+
+.form {
+  margin: 0px;
+  padding: 0px;
+  list-style: none; }
+
+.form--section {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px; }
+  @media screen and (min-width: 768px) {
+    .form--section {
+      width: 20em; } }
+
+.form--input {
+  width: 100%;
+  display: inline-block;
+  background-color: transparent;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  margin-bottom: 1em;
+  box-sizing: border-box;
+  padding: 10px; }
+
+.form--error {
+  color: red;
+  border-color: red; }
+
+.form--dropdown {
+  width: 100%;
+  display: inline-block;
+  background-color: transparent;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  margin-bottom: 1em;
+  box-sizing: border-box;
+  padding: 10px;
+  background: transparent url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") no-repeat 95%;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  margin-bottom: 10px; }
+  @media screen and (min-width: 768px) {
+    .form--dropdown {
+      width: 20em; } }
+  .form--dropdown:focus {
+    outline: none; }
 
 /*# sourceMappingURL=global.css.map */
