added error colour variable

--- a/components/forms.html
+++ b/components/forms.html
@@ -48,7 +48,7 @@
           <option>Option Three</option>
         </select>
       </li>
-      <li class="form--section margin-top-large">
+      <li class="form--section margin-top-large margin-bottom-small">
         <h3>Submit Button:</h3>
         <p>A submit button calls a class from the buttons component to make it form ready</p>
       </li>
